# mcp-jenkins-intelligence

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  build.sh  glama.json  install.sh  pyproject.toml  requirements.txt  server.py
config/: settings.py
manuals/configuration/: README.md
manuals/examples/: mcp-config-standalone.json
manuals/quick-start/: README.md
manuals/troubleshooting/: README.md
models/: __init__.py  pipeline.py
prompts/: __init__.py  pipeline_prompts.py
resources/: __init__.py  pipeline_resources.py
services/: __init__.py  advanced_ai_tools.py  advanced_security_tools.py  ai_tools.py  analytics_tools.py  control_tools.py  core_tools.py  execution_analysis_service.py  jenkins_service.py  jenkinsfile_retrieval_service.py  jenkinsfile_service.py  monitoring_tools.py  performance_tools.py  security_tools.py
utils/: __init__.py  helpers.py
